[workspace]
resolver = "2"

members = [
    "Introduction/GettingStarted/*/",
    "ABasicCalculator/Introduction/*/",
    "ABasicCalculator/Integers/*/",
    "ABasicCalculator/Variables/*/",
    "ABasicCalculator/BranchingIfElse/*/",
    "ABasicCalculator/Panics/*/",
    "ABasicCalculator/Factorial/*/",
    "ABasicCalculator/LoopsWhile/*/",
    "ABasicCalculator/LoopsFor/*/",
    "ABasicCalculator/OverflowAndUnderflow/*/",
    "ABasicCalculator/SaturatingArithmetic/*/",
    "ABasicCalculator/ConversionsAsCasting/*/",
    "TicketV1/Introduction/*/",
    "TicketV1/Structs/*/",
    "TicketV1/Validation/*/",
    "TicketV1/Modules/*/",
    "TicketV1/Visibility/*/",
    "TicketV1/Encapsulation/*/",
    "TicketV1/Ownership/*/",
    "TicketV1/Setters/*/",
    "TicketV1/Stack/*/",
    "TicketV1/Heap/*/",
    "TicketV1/ReferencesInMemory/*/",
    "TicketV1/Destructors/*/",
    "TicketV1/Outro/*/",
    "Traits/Introduction/*/",
    "Traits/Trait/*/",
    "Traits/OrphanRule/*/",
    "Traits/OperatorOverloading/*/",
    "Traits/DeriveMacros/*/",
    "Traits/TraitBounds/*/",
    "Traits/StringSlices/*/",
    "Traits/DerefTrait/*/",
    "Traits/SizedTrait/*/",
    "Traits/FromTrait/*/",
    "Traits/AssociatedVsGenericTypes/*/",
    "Traits/CloneTrait/*/",
    "Traits/CopyTrait/*/",
    "Traits/DropTrait/*/",
    "Traits/Outro/*/",
    "TicketV2/Introduction/*/",
    "TicketV2/Enums/*/",
    "TicketV2/BranchingMatch/*/",
    "TicketV2/VariantsWithData/*/",
    "TicketV2/BranchingIfLetAndLetElse/*/",
    "TicketV2/Nullability/*/",
    "TicketV2/Fallibility/*/",
    "TicketV2/Unwrap/*/",
    "TicketV2/ErrorEnums/*/",
    "TicketV2/ErrorTrait/*/",
    "TicketV2/Packages/*/",
    "TicketV2/Dependencies/*/",
    "TicketV2/thiserror/*/",
    "TicketV2/TryFromTrait/*/",
    "TicketV2/ErrorSource/*/",
    "TicketV2/Outro/*/",
    "TicketManagement/Introduction/*/",
    "TicketManagement/Arrays/*/",
    "TicketManagement/Vectors/*/",
    "TicketManagement/Resizing/*/",
    "TicketManagement/Iterators/*/",
    "TicketManagement/Iter/*/",
    "TicketManagement/Lifetimes/*/",
    "TicketManagement/Combinators/*/",
    "TicketManagement/ImplTrait/*/",
    "TicketManagement/ImplTraitPt2/*/",
    "TicketManagement/Slices/*/",
    "TicketManagement/MutableSlices/*/",
    "TicketManagement/TwoStates/*/",
    "TicketManagement/IndexTrait/*/",
    "TicketManagement/IndexMutTrait/*/",
    "TicketManagement/HashMap/*/",
    "TicketManagement/BTreeMap/*/",
    "Threads/Introduction/*/",
    "Threads/Threads/*/",
    "Threads/StaticLifetime/*/",
    "Threads/LeakingMemory/*/",
    "Threads/ScopedThreads/*/",
    "Threads/Channels/*/",
    "Threads/InteriorMutability/*/",
    "Threads/AckPattern/*/",
    "Threads/Client/*/",
    "Threads/BoundedChannels/*/",
    "Threads/Patching/*/",
    "Threads/MutexSendAndArc/*/",
    "Threads/RwLock/*/",
    "Threads/WithoutChannels/*/",
    "Threads/SyncTrait/*/",
    "Futures/Introduction/*/",
    "Futures/AsynchronousFunctions/*/",
    "Futures/SpawningTasks/*/",
    "Futures/Runtime/*/",
    "Futures/FutureTrait/*/",
    "Futures/BlockingTheRuntime/*/",
    "Futures/AsyncAwarePrimitives/*/",
    "Futures/Cancellation/*/",
    "Futures/Outro/*/",
    "GoingFurther/Epilogue/*/",
]

exclude = [
    "**/*.yaml"
]
